--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
     "ws": "^8.18.1"
-  }
-,
+  },
   "type": "module"
 }
